force-app/main/default/objects/Account/fields/AUM_Assets_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>AUM_Assets_Under_Management__c</fullName>
    <label>AUM (Assets Under Management)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>