force-app/main/default/objects/Account/fields/Current_Stock_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock_Price__c</fullName>
    <description>To be populated from external API.</description>
    <label>Current Stock Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>