force-app/main/default/objects/Account/fields/Decision_Making_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Timeline__c</fullName>
    <description>Days to decision</description>
    <label>Decision Making Timeline (Days)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>