force-app/main/default/objects/Account/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Calculated via Apex job/process.</description>
    <label>Engagement Score</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>