force-app/main/default/objects/Account/fields/Investment_Stage_Focus__c.field-meta.xml
<CustomField>
    <fullName>Investment_Stage_Focus__c</fullName>
    <label>Investment Stage Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>