force-app/main/default/objects/Account/fields/Investor_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Investor_Health_Score__c</fullName>
    <label>Investor Health Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <formula>0</formula>
    <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
</CustomField>