force-app/main/default/objects/Account/fields/Last_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Investment_Date__c</fullName>
    <label>Last Investment Date</label>
    <type>Date</type>
</CustomField>