force-app/main/default/objects/Account/fields/Portfolio_Size__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Size__c</fullName>
    <label>Portfolio Size</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>