force-app/main/default/objects/Account/fields/Preferred_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Channel__c</fullName>
    <label>Preferred Communication Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>