force-app/main/default/objects/Account/fields/Sector_Focus__c.field-meta.xml
<CustomField>
    <fullName>Sector_Focus__c</fullName>
    <label>Sector Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>HealthTech</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>AI/ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>