force-app/main/default/objects/Account/fields/Stock_Ticker__c.field-meta.xml
<CustomField>
    <fullName>Stock_Ticker__c</fullName>
    <label>Stock Ticker</label>
    <length>50</length>
    <type>Text</type>
</CustomField>