force-app/main/default/objects/Account/fields/Total_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_Amount__c</fullName>
    <label>Total Investment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>