force-app/main/default/objects/Account/recordTypes/Angel_Investor.recordType-meta.xml
<RecordType>
    <fullName>Angel_Investor</fullName>
    <active>true</active>
    <label>Angel Investor</label>
</RecordType>