force-app/main/default/objects/Account/recordTypes/Institutional_Investor.recordType-meta.xml
<RecordType>
    <fullName>Institutional_Investor</fullName>
    <active>true</active>
    <label>Institutional Investor</label>
</RecordType>