force-app/main/default/objects/Account/recordTypes/Private_Equity_Firm.recordType-meta.xml
<RecordType>
    <fullName>Private_Equity_Firm</fullName>
    <active>true</active>
    <label>Private Equity Firm</label>
</RecordType>