force-app/main/default/objects/Account/recordTypes/Venture_Capital_Firm.recordType-meta.xml
<RecordType>
    <fullName>Venture_Capital_Firm</fullName>
    <active>true</active>
    <label>Venture Capital Firm</label>
</RecordType>